--- a/src/Components/SearchBar/index.scss
+++ b/src/Components/SearchBar/index.scss
@@ -26,9 +26,6 @@ $primaryColor: #00509d;
   }
 }
 
-@media (min-width: 600px) {
-}
-
 @media (min-width: 900px) {
   .searchBar input {
     width: 40%;
