--- a/src/Pages/Offer/index.scss
+++ b/src/Pages/Offer/index.scss
@@ -63,7 +63,7 @@
 
     .technology {
       margin: 5px;
-      width: 25%;
+      width: 45%;
       padding: 4px;
       border-radius: 20px;
       background-color: #00296b;
